--- a/backend/deployemnt.yml
+++ b/backend/deployemnt.yml
@@ -12,7 +12,7 @@ spec:
     spec:
       containers:
         - name: backend
-          image: mayurmahatma/backend:v1 
+          image: mayurmahatma/back:v1
           ports:
             - containerPort: 8080
   replicas: 3
